# exam1

mqexam/: TODO  manage.py  pyproject.toml
mqexam/apps/: admin.py  forms.py  models.py  urls.py  views.py
mqexam/root/: settings.py  urls.py
