[tool.poetry]
name = "imtixon-project"
version = "0.1.0"
description = ""
authors = ["Priller <coderbackend@gmail.com>"]
readme = "README.md"
packages = [{include = "imtixon_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
psycopg2-binary = "^2.9.6"
django-import-export = "^3.1.0"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
